<resources>
    <string name="app_name">Iron Bank</string>
    <string name="teller">Teller</string>
    <string name="client">Client</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">sign in</string>
    <string name="empty_creds_validation_message">Username or password cannot be empty !</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_teller_home">TellerHomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="clients">Clients</string>
    <string name="terminate_requests">Terminate Requests</string>

    <string name="full_name">%1$s %2$s</string>
    <string name="invalid_teller_id">Invalid Teller Id.</string>
    <string name="invalid_client_id">Invalid Client Id.</string>

    <string name="welcome">Welcome, %1$s !</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terminate_account_title">Terminate Account</string>
    <string name="terminate_account_message">Are you sure you want to terminate this account?</string>
    <string name="account_deleted_success">Account successfully terminated.</string>
    <string name="client_add_success">Client Added Successfully!</string>
</resources>
